界面美化以及完成提醒功能

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,6 +17,9 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
+        <receiver android:name=".alarmreceiver"></receiver>
+        <receiver android:name=".backappreceiver"></receiver>
         <activity android:name=".subgoalpage" />
     </application>
 
