--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,11 +5,12 @@ android {
     buildToolsVersion "26.0.2"
     defaultConfig {
         applicationId "com.hit.wegoal"
-        minSdkVersion 15
+        minSdkVersion 16
         targetSdkVersion 26
         versionCode 1
         versionName "1.0"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
+        vectorDrawables.useSupportLibrary = true
     }
     buildTypes {
         release {
@@ -25,11 +26,12 @@ dependencies {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
     compile 'com.feezu.liuli:timeselector:1.1.3+'
-    compile 'com.android.support:design:24.2.1'
-    compile 'com.roughike:bottom-bar:2.0.2'
+    compile 'com.android.support:design:26.+'
     compile 'org.litepal.android:core:1.6.0'
     compile 'com.android.support:appcompat-v7:26.0.+'
     compile 'com.android.support.constraint:constraint-layout:1.0.2'
     compile 'com.android.support:recyclerview-v7:26.0.0-alpha1'
+    compile 'com.android.support:support-vector-drawable:26.+'
+    compile 'com.android.support:support-v4:26.+'
     testCompile 'junit:junit:4.12'
 }
